--- a/index.ipynb
+++ b/index.ipynb
@@ -3679,7 +3679,7 @@
    "outputs": [],
    "source": [
     "def error_line_traces(x_values, y_values, m, b):\n",
-    "    y_hat = "
+    "    y_hat = m*x_values"
    ]
   },
   {
