--- a/index.ipynb
+++ b/index.ipynb
@@ -3680,7 +3680,8 @@
    "source": [
     "def error_line_traces(x_values, y_values, m, b):\n",
     "    y_hat = m*x_values+b\n",
-    "    errors m= "
+    "    errors = {}\n",
+    "    "
    ]
   },
   {
