--- a/index.ipynb
+++ b/index.ipynb
@@ -3681,6 +3681,7 @@
     "def error_line_traces(x_values, y_values, m, b):\n",
     "    y_hat = m*x_values+b\n",
     "    errors = {[]}\n",
+    "    erros\n",
     "    "
    ]
   },
