Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -3681,7 +3681,8 @@
     "def error_line_traces(x_values, y_values, m, b):\n",
     "    y_hat = m*x_values+b\n",
     "    errors = {[]}\n",
-    "    for trace in traces\n",
+    "    for trace in traces:\n",
+    "        \n",
     "    "
    ]
   },
