Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -3683,7 +3683,7 @@
     "    errors = {[]}\n",
     "    for x in x_values:\n",
     "        y_hat = m*x+b\n",
-    "        \n",
+    "        errors.append\n",
     "        \n",
     "        \n",
     "        \n",
