Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -3683,7 +3683,7 @@
     "    errors = []\n",
     "    for x in x_values:\n",
     "        y_hat = m*x+b\n",
-    "        x_throwaway = {'x': [x]}\n",
+    "        x_throwaway = {'x': [x,x], 'y'}\n",
     "        \n",
     "        \n",
     "        \n",
