Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -3684,7 +3684,8 @@
     "    for x in x_values:\n",
     "        y_hat = m*x+b\n",
     "        y_actual = y_values[x]\n",
-    "        x_throwaway = {'x': [x,x], 'y':[y_actual] }\n",
+    "        x_throwaway = {'x': [x,x], 'y':[y_actual, y_hat] }\n",
+    "        \n",
     "        \n",
     "        \n",
     "        \n",
