Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -3685,7 +3685,8 @@
     "        y_hat = m*x+b\n",
     "        y_actual = y_values[x]\n",
     "        x_throwaway = {'x': [x,x], 'y':[y_actual, y_hat] }\n",
-    "        errors.append(x)\n",
+    "        errors.append(x_throwaway)\n",
+    "        \n",
     "        \n",
     "        \n",
     "        \n",
