Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -3674,7 +3674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3686,7 +3686,7 @@
     "        y_actual = y_values[x]\n",
     "        x_throwaway = {'x': [x,x], 'y':[y_actual, y_hat] }\n",
     "        errors.append(x_throwaway)\n",
-    "        \n",
+    "    return errors\n",
     "        \n",
     "        \n",
     "        \n",
