Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -3681,7 +3681,7 @@
     "def error_line_traces(x_values, y_values, m, b):\n",
     "    #y_hat = m*x_values+b\n",
     "    errors = []\n",
-    "    len(x_values)\n",
+    "    i =len(x_values)\n",
     "    for x in x_values:\n",
     "        y_hat = m*x+b\n",
     "        y_actual = y_values[x]\n",
