--- a/index.ipynb
+++ b/index.ipynb
@@ -3681,8 +3681,8 @@
     "def error_line_traces(x_values, y_values, m, b):\n",
     "    #y_hat = m*x_values+b\n",
     "    errors = []\n",
-    "    i =len(x_values)\n",
-    "    for x in x_values:\n",
+    "    i = len(x_values)\n",
+    "    for  in x_values:\n",
     "        y_hat = m*x+b\n",
     "        y_actual = y_values[x]\n",
     "        x_throwaway = {'x': [x,x], 'y':[y_actual, y_hat] }\n",
