Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -3683,8 +3683,8 @@
     "    errors = []\n",
     "    x_indices = list(range(0,len(x_values)))\n",
     "    for index in x_indices:\n",
-    "        y_hat = m*x+b\n",
-    "        y_actual = y_values[x]\n",
+    "        y_hat = m*index+b\n",
+    "        y_actual = y_values[index]\n",
     "        x_throwaway = {'x': [x,x], 'y':[y_actual, y_hat] }\n",
     "        errors.append(x_throwaway)\n",
     "    return errors\n",
