--- a/index.ipynb
+++ b/index.ipynb
@@ -3674,7 +3674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3685,7 +3685,7 @@
     "    for index in x_indices:\n",
     "        y_hat = m*x_values[index]+b\n",
     "        y_actual = y_values[index]\n",
-    "        x_throwaway = {'x': [x_values[index],x_values[index]], 'y':[y_actual, y_hat] }\n",
+    "        x_throwaway = {'marker' : {'color':'red'}, 'mode':'lines', 'name':'error at 120','x': [x_values[index],x_values[index]], 'y':[y_actual, y_hat] }\n",
     "        errors.append(x_throwaway)\n",
     "    return errors\n",
     "        \n",
@@ -3697,7 +3697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
