Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -3674,9 +3674,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-32-091a4167eaed>, line 8)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-32-091a4167eaed>\"\u001b[0;36m, line \u001b[0;32m8\u001b[0m\n\u001b[0;31m    x_throwaway = {'marker' : {'color':'red'}, 'mode':'lines', 'name':'error at 'x_values[index]  ,'x': [x_values[index],x_values[index]], 'y':[y_actual, y_hat] }\u001b[0m\n\u001b[0m                                                                                        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "def error_line_traces(x_values, y_values, m, b):\n",
     "    #y_hat = m*x_values+b\n",
@@ -3685,7 +3694,7 @@
     "    for index in x_indices:\n",
     "        y_hat = m*x_values[index]+b\n",
     "        y_actual = y_values[index]\n",
-    "        x_throwaway = {'marker' : {'color':'red'}, 'mode':'lines', 'name':'error at 'x_values[index]  ,'x': [x_values[index],x_values[index]], 'y':[y_actual, y_hat] }\n",
+    "        x_throwaway = {'marker' : {'color':'red'}, 'mode':'lines', 'name':'error at ' x_values[index]  ,'x': [x_values[index],x_values[index]], 'y':[y_actual, y_hat] }\n",
     "        errors.append(x_throwaway)\n",
     "    return errors\n",
     "        \n",
