Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -3694,8 +3694,7 @@
     "    for index in x_indices:\n",
     "        y_hat = m*x_values[index]+b\n",
     "        y_actual = y_values[index]\n",
-    "        x_throwaway = {'marker' : {'color':'red'}, 'mode':'lines', 'name':'error at x_values[index]' x_values[index]  ,'x': [x_values[index],x_values[index]], 'y':[y_actual, y_hat] }\n",
-    "        errors.append(x_throwaway)\n",
+    "        x_throwaway = {'marker' : {'color':'red'}, 'mode':'lines', 'name':'error at x_values[index]'\n",
     "    return errors\n",
     "        \n",
     "        \n",
