--- a/index.ipynb
+++ b/index.ipynb
@@ -3686,6 +3686,7 @@
     "        y_hat = m*x_values[index]+b\n",
     "        y_actual = y_values[index]\n",
     "        x_throwaway = {'marker' : {'color':'red'}, 'mode':'lines', 'name':'error at x_values[index]','x': [x_values[index],x_values[index]], 'y':[y_actual, y_hat] }\n",
+    "        error\n",
     "    return errors\n",
     "        \n",
     "        \n",
