Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -3674,7 +3674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3686,7 +3686,7 @@
     "        y_hat = m*x_values[index]+b\n",
     "        y_actual = y_values[index]\n",
     "        x_throwaway = {'marker' : {'color':'red'}, 'mode':'lines', 'name':'error at x_values[index]','x': [x_values[index],x_values[index]], 'y':[y_actual, y_hat] }\n",
-    "        errors.append(x)\n",
+    "        errors.append(x_throwaway)\n",
     "    return errors\n",
     "        \n",
     "        \n",
@@ -3697,7 +3697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3706,16 +3706,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[]"
+       "30"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
