Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -3685,7 +3685,7 @@
     "    for index in x_indices:\n",
     "        y_hat = m*x_values[index]+b\n",
     "        y_actual = y_values[index]\n",
-    "        x_throwaway = {'marker' : {'color':'red'}, 'mode':'lines', 'name':f\"\",'x': [x_values[index],x_values[index]], 'y':[y_actual, y_hat] }\n",
+    "        x_throwaway = {'marker' : {'color':'red'}, 'mode':'lines', 'name':f\"error at {x_}\",'x': [x_values[index],x_values[index]], 'y':[y_actual, y_hat] }\n",
     "        errors.append(x_throwaway)\n",
     "    return errors\n",
     "        \n",
