--- a/index.ipynb
+++ b/index.ipynb
@@ -5325,7 +5325,7 @@
    "outputs": [],
    "source": [
     "def squared_error(x_values, y_values, m, b, x):\n",
-    "    \n",
+    "    error_line_trace(x_values, y_values, m, b, x)\n",
     "    "
    ]
   },
