--- a/index.ipynb
+++ b/index.ipynb
@@ -5326,7 +5326,7 @@
    "source": [
     "def squared_error(x_values, y_values, m, b, x):\n",
     "    spongebob = error_line_trace(x_values, y_values, m, b, x)\n",
-    "    error = spogebob\n",
+    "    error = spogebob['y']\n",
     "    "
    ]
   },
