Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -5327,7 +5327,7 @@
     "def squared_error(x_values, y_values, m, b, x):\n",
     "    spongebob = error_line_trace(x_values, y_values, m, b, x)\n",
     "    error = spongebob['y'][0]-spongebob['y'][-1]\n",
-    "    error_sq\n",
+    "    error_square = error**2\n",
     "    "
    ]
   },
