--- a/index.ipynb
+++ b/index.ipynb
@@ -5320,7 +5320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5328,15 +5328,26 @@
     "    spongebob = error_line_trace(x_values, y_values, m, b, x)\n",
     "    error = spongebob['y'][0]-spongebob['y'][-1]\n",
     "    error_square = error**2\n",
-    "    return\n",
+    "    return error_square\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "37.20999999999993"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "x_values and y_values and squared_error(x_values, y_values, 1.7, 10, x_values[0]) # 37.20999999999993"
    ]
