--- a/index.ipynb
+++ b/index.ipynb
@@ -5367,7 +5367,7 @@
    "source": [
     "def squared_errors(x_values, y_values, m, b):\n",
     "    uno = error_line_traces(x_values, y_values, m, b)\n",
-    "    error_indices = "
+    "    error_indices = list(range)"
    ]
   },
   {
