--- a/index.ipynb
+++ b/index.ipynb
@@ -5369,7 +5369,8 @@
     "    uno = error_line_traces(x_values, y_values, m, b)\n",
     "    error_indices = list(range(0,len(uno)))\n",
     "    for index in error_indices:\n",
-    "        err"
+    "        errors = []\n",
+    "        "
    ]
   },
   {
