--- a/index.ipynb
+++ b/index.ipynb
@@ -5370,7 +5370,8 @@
     "    error_indices = list(range(0,len(uno)))\n",
     "    for index in error_indices:\n",
     "        errors = []\n",
-    "        error_a = squared_error(x_values, y_values, m, b, x_values[index])"
+    "        error_a = squared_error(x_values, y_values, m, b, x_values[index])\n",
+    "        "
    ]
   },
   {
