--- a/index.ipynb
+++ b/index.ipynb
@@ -5361,9 +5361,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-50-45c5e52e1681>, line 6)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-50-45c5e52e1681>\"\u001b[0;36m, line \u001b[0;32m6\u001b[0m\n\u001b[0;31m    uno[index].update('error':error_a)\u001b[0m\n\u001b[0m                             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "def squared_errors(x_values, y_values, m, b):\n",
     "    uno = error_line_traces(x_values, y_values, m, b)\n",
