--- a/index.ipynb
+++ b/index.ipynb
@@ -5379,7 +5379,7 @@
     "    error_indices = list(range(0,len(uno)))\n",
     "    for index in error_indices:\n",
     "        error_a = squared_error(x_values, y_values, m, b, x_values[index])\n",
-    "        uno[index].update('error':error_a)\n",
+    "        uno[index].update({}'error':error_a})\n",
     "    return uno"
    ]
   },
