--- a/index.ipynb
+++ b/index.ipynb
@@ -5589,7 +5589,8 @@
    "outputs": [],
    "source": [
     "def residual_sum_squares(x_values, y_values, m, b):\n",
-    "    due = "
+    "    due = squared_errors(x_values, y_values, m, b)\n",
+    "    "
    ]
   },
   {
