--- a/index.ipynb
+++ b/index.ipynb
@@ -5590,7 +5590,7 @@
    "source": [
     "def residual_sum_squares(x_values, y_values, m, b):\n",
     "    due = squared_errors(x_values, y_values, m, b)\n",
-    "    sum_indices = "
+    "    sum_indices = list(range(0,len))"
    ]
   },
   {
