Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -3687,6 +3687,8 @@
     "    #    x_throwaway = {'marker' : {'color':'red'}, 'mode':'lines', 'name':f\"error at {x_values[index]}\" ,'x': [x_values[index],x_values[index]], 'y':[y_actual, y_hat] }\n",
     "    #    errors.append(x_throwaway)\n",
     "    #return errors\n",
+    "    \n",
+    "    return list \n",
     "        \n",
     "        \n",
     "        \n",
