Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -3688,7 +3688,7 @@
     "    #    errors.append(x_throwaway)\n",
     "    #return errors\n",
     "    \n",
-    "    return list(map(lambda))\n",
+    "    return list(map(lambda x: ))\n",
     "        \n",
     "        \n",
     "        \n",
