--- a/index.ipynb
+++ b/index.ipynb
@@ -2528,7 +2528,7 @@
    "source": [
     "def error_line_trace(x_values, y_values, m, b, x):\n",
     "    y_hat = m*x+b\n",
-    "    y = y_actual(x, x_values, y_val\n",
+    "    y = y_actual(x, x_values, y_values)\n",
     "    return {'marker' : {'color':'red'}, 'mode':'lines', 'name':f\"error at {x}\"'error at 120', 'x': [x,x], 'y': [y,y_hat]}"
    ]
   },
