--- a/index.ipynb
+++ b/index.ipynb
@@ -5327,9 +5327,10 @@
    "source": [
     "def squared_error(x_values, y_values, m, b, x):\n",
     "    #spongebob = error_line_trace(x_values, y_values, m, b, x)\n",
-    "    #error = spongebob['y'][0]-spongebob['y'][-1]\n",
+    "    #error = spongebob['y'][0]-spongebob['y'][-1]                 DUMB WAY\n",
     "    #error_square = error**2\n",
     "    #return error_square\n",
+    "    \n",
     "    "
    ]
   },
