--- a/index.ipynb
+++ b/index.ipynb
@@ -5330,7 +5330,7 @@
     "    #error = spongebob['y'][0]-spongebob['y'][-1]                 DUMB WAY\n",
     "    #error_square = error**2\n",
     "    #return error_square\n",
-    "    return error()\n",
+    "    return error(x_values, y_values, m, b, x)**\n",
     "    "
    ]
   },
