--- a/index.ipynb
+++ b/index.ipynb
@@ -5370,10 +5370,11 @@
     "def squared_errors(x_values, y_values, m, b):\n",
     "    #uno = error_line_traces(x_values, y_values, m, b)\n",
     "    #error_indices = list(range(0,len(uno)))\n",
-    "    #for index in error_indices:                                             \n",
+    "    #for index in error_indices:                                             Did too much\n",
     "    #    error_a = squared_error(x_values, y_values, m, b, x_values[index])\n",
     "    #    uno[index].update({'error':error_a})\n",
-    "    #return uno"
+    "    #return uno\n",
+    "    "
    ]
   },
   {
