--- a/index.ipynb
+++ b/index.ipynb
@@ -5374,7 +5374,8 @@
     "    #    error_a = squared_error(x_values, y_values, m, b, x_values[index])\n",
     "    #    uno[index].update({'error':error_a})\n",
     "    #return uno\n",
-    "    "
+    "    \n",
+    "    return list()"
    ]
   },
   {
