Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -5445,10 +5445,10 @@
     "def residual_sum_squares(x_values, y_values, m, b):\n",
     "    #due = squared_errors(x_values, y_values, m, b)\n",
     "    #sum_indices = list(range(0,len(due)))\n",
-    "    #sum = 0\n",
+    "    #sum = 0                                          did too much\n",
     "    #for index in sum_indices:\n",
-    "        sum += due[index]['error']\n",
-    "    return sum "
+    "    #    sum += due[index]['error']\n",
+    "    #return sum "
    ]
   },
   {
