Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -5449,7 +5449,7 @@
     "    #for index in sum_indices:\n",
     "    #    sum += due[index]['error']\n",
     "    #return sum \n",
-    "    return sum"
+    "    return sum(squared_errors(x_values, y_values, m, b)"
    ]
   },
   {
